--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   --bg-secondary: #212121;
   --text-primary: #ffffff;
   --text-secondary: #b3b3b3;
-  --accent-color: #ff5500;
+  --accent-color: #a600ff;
   /* SoundCloud Orange */
   --font-family: 'Inter', system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
